[gd_scene load_steps=6 format=2]

[ext_resource path="res://game_screen/game_screen.gd" type="Script" id=1]
[ext_resource path="res://game_screen/gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://util/shaker.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/fader.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/mus_gameplay.wav" type="AudioStream" id=5]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Gui" parent="." instance=ExtResource( 2 )]

[node name="ScreenShaker" parent="." instance=ExtResource( 3 )]

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sfx"

[node name="Fader" parent="." instance=ExtResource( 4 )]
audio_player = NodePath("../MusicPlayer")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[connection signal="next_level_requested" from="Gui" to="." method="_on_Gui_next_level_requested"]
